<resources>
    <string name="app_name">TestMobi</string>

    <string name="mammals">Млекопитающие</string>
    <string name="reptiles">Пресмыкающиеся</string>
    <string name="fish">Рыбы</string>
    <string name="freshwater">Пресноводные</string>
    <string name="birds">Птицы</string>
    <string name="insecticides">Насекомые</string>

    <string name="txtMain">Классификация животных</string>

    <string name="aboutDefault">Описание животоного, тут много всяких интересных слов,
                                очень много и жутко интересно. Описание животоного, тут много всяких интересных слов,
                                очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                очень много и жутко интересно.
        
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                                            очень много и жутко интересно.
                                Описание животоного, тут много всяких интересных слов,
                                очень много и жутко интересно.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
