<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context="by.maximtihomirov.testmobi.MainActivity">

    <Button
        android:id="@+id/Button1"
        android:layout_width="96dp"
        android:layout_height="100dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn1"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/Button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn2"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/Button3"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/Button1"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/Button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn3"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/Button4"
        android:layout_width="99dp"
        android:layout_height="100dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn4"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
        android:id="@+id/Button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn5"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/Button6"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/Button4"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <Button
        android:id="@+id/Button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn6"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/mammals"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/Button1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Button1"
        app:layout_constraintTop_toBottomOf="@+id/Button1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/reptiles"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/Button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Button2"
        app:layout_constraintTop_toBottomOf="@+id/Button2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/fish"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/Button3"
        app:layout_constraintStart_toStartOf="@+id/Button3"
        app:layout_constraintTop_toBottomOf="@+id/Button3"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/freshwater"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/Button4"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="@+id/Button4"
        app:layout_constraintTop_toBottomOf="@+id/Button4"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/birds"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/Button5"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/Button5"
        app:layout_constraintTop_toBottomOf="@+id/Button5"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/insecticides"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/Button6"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/Button6"
        app:layout_constraintTop_toBottomOf="@+id/Button6"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtMain"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
